# mc-mcp-client

./: .gitignore  LICENSE  README.md  mc_mcp_config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: protocol.md  smoke_test_results.md
examples/: quickstart.py  qwen3_8b_grpo.py  qwen3_grpo_config.yaml  qwen3_grpo_live_collect.yaml
src/mc_mcp_client/: __init__.py  config.py  connection.py  orchestrator.py  protocol.py
src/mc_mcp_client/backends/: __init__.py  base.py  vllm.py
tests/: conftest.py  test_backends.py  test_config.py  test_connection.py  test_orchestrator.py  test_protocol.py
tests/integration/: conftest.py  test_e2e_smoke.py  test_reward_parity.py
