[project]
name = "mc-mcp-client"
version = "0.1.0"
description = "Reference client for the MC-MCP mathematical reasoning gym"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
vllm = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
