[project]
name = "mc-mcp-client"
version = "0.1.0"
description = "Reference client for the MC-MCP mathematical reasoning gym"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
vllm = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "live_service: requires a live MC-MCP service (set MC_MCP_SERVICE_URL)",
    "requires_model: requires a real LLM model server (set MC_MCP_MODEL_URL)",
]
# Integration tests are excluded from the default run; opt in with:
#   pytest tests/integration/ -v
#   pytest -m live_service -v
